# Intelligent-IT-Service-Desk

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  create_table.py  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py
backend/data/: sample_tickets.csv
backend/src/: activity_log.py  auth.py  classifier.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/routers/: admin.py  analytics.py  auth_routes.py  health.py  tickets.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ProtectedRoute.tsx  UserAvatar.tsx
frontend/src/components/auth/: AdminRoute.tsx  ProtectedRoute.tsx  RoleRedirect.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  SidebarContext.tsx  Topbar.tsx  index.ts
frontend/src/components/shared/: CategoryBadge.tsx  ConfirmationButton.tsx  ConfirmationDialog.tsx  DataTable.tsx  EmptyState.tsx  ErrorState.tsx  FilterPanel.tsx  LoadingButton.tsx  MetricCard.tsx  PageHeader.tsx  Pagination.tsx  (+4 more)
frontend/src/pages/: AnalyticsPage.tsx  CreateTicketPage.tsx  DashboardPage.tsx  LoginPage.tsx  MyTicketsPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  TicketDetailsPage.tsx  TicketListPage.tsx  UserTicketDetailsPage.tsx  UserTicketListPage.tsx
frontend/src/providers/: AuthProvider.tsx  QueryProvider.tsx  ThemeProvider.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/styles/: index.css
frontend/src/types/: auth.ts  ticket.ts
(+7 files in other folders)
