[project]
name = "backend"
version = "0.1.0"
description = "Intelligent IT Service Desk Automation Platform — backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "ruff>=0.15.20",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.9.0,<2.11",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true